--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@ permalink: /
 <html>
 	{% assign post = site.pages | last %}
 	<head>
-		<meta http-equiv="refresh" content="0; URL='{{ post.url }}'"
+		<meta http-equiv="refresh" content="0; URL='{{ site.url }}{{ post.url }}'"
 		<link href="{{ site.url }}/css/styles.css" rel="stylesheet">
 	</head>
 	<body>
-		Redirecting to <a href="{{ post.url }}">{{ site.url }}{{ post.url }}</a>
+		Redirecting to <a href="{{ site.url }}{{ post.url }}">{{ site.url }}{{ post.url }}</a>
 		<script type="text/javascript">
-			window.location = "{{ post.url }}";
+			window.location = "{{ site.url }}{{ post.url }}";
 		</script>
 	</body>
 </html>
