--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@ permalink: /
 ---
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	{% assign post = site.pages | last %}
 	<head>
-		<meta http-equiv="refresh" content="0; URL='{{ site.url }}{{ post.url }}'"
+		<meta http-equiv="refresh" content="0; URL='{{ site.url }}{{ post.url }}'">
 		<link href="{{ site.url }}/css/styles.css" rel="stylesheet">
+		<title>Redirecting to {{ site.url }}{{ post.url }}</title>
 	</head>
 	<body>
 		Redirecting to <a href="{{ site.url }}{{ post.url }}">{{ site.url }}{{ post.url }}</a>
